--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,8 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Fast & Free Link In Bio Website (Hugo Theme) # Website name
-baseURL: 'https://example.com/' # Website URL
+title: Personal Webpage of Lukas Burgholzer # Website name
+baseURL: '/' # Website URL
 
 ############################
 ## LANGUAGE
@@ -21,7 +21,7 @@ removePathAccents: true
 
 build:
   writeStats: true
-enableGitInfo: false
+enableGitInfo: true
 summaryLength: 30
 paginate: 10
 enableEmoji: true
@@ -35,10 +35,10 @@ outputs:
   home: [HTML, RSS, headers, redirects]
   section: [HTML, RSS]
 imaging:
-  resampleFilter: lanczos
-  quality: 80
-  anchor: smart
-timeout: 600000
+  resampleFilter: Lanczos
+  quality: 90
+  anchor: Smart
+timeout: "600000s"
 taxonomies:
   author: authors
 markup:
