--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Personal website of Lukas Burgholzer.'
+    description: 'Postdoctoral Researcher at TUM.'
     twitter: 'BurgholzerLukas'
   analytics:
     google_analytics: '250102556'
@@ -23,7 +23,7 @@ marketing:
     fathom: ''
     pirsch: ''
   verification:
-    google: ''
+    google: '1UxrdQRFp6YpCZYRbge2JcUjzy4RmfbzL_orIbGfrO4'
     baidu: ''
 
 # Site header
